Finish websit, footer added

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,3 +35,10 @@ a {
   font-size: 18px;
 
 }
+
+footer {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
+}
